# pgmanage

./: .gitignore  AUTHORS  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.MD  Dockerfile  LICENSE  README-OmniDB.md  README.md  pyproject.toml  requirements-not-working.txt  requirements.txt
OmniDB/: OmniDB-lin.spec  OmniDB-mac.spec  config.py  omnidb-server.py  omnidb-win.spec
OmniDB/OmniDB/: custom_settings.py  settings.py  urls.py
OmniDB/OmniDB_app/: urls.py
OmniDB/OmniDB_app/include/: Session.py
OmniDB/OmniDB_app/migrations/: 0002_3_0_1.py  0003_userdetails_masterpass_check.py  0004_confighistory.py  0004_userdetails_masterpass_check.py
OmniDB/OmniDB_app/models/: main.py
OmniDB/OmniDB_app/tests.old/: test_views.py
OmniDB/OmniDB_app/utils/: conf.py  crypto.py  master_password.py
OmniDB/OmniDB_app/views/: __init__.py  configuration.py  connections.py  login.py  memory_objects.py  monitor_dashboard.py  polling.py  tree.py  tree_oracle.py  users.py  workspace.py
deploy/app/: index.html  package.json  pgmanage.desktop
deploy/linux/: build_images.sh  deploy.sh
deploy/linux/pkgbuild/: Dockerfile  entrypoint.sh
deploy/linux/tarbuild/: Dockerfile  entrypoint.sh
deploy/macosx/: README.md  deploy.sh  mac-icon.icns  settings.py
deploy/windows/: deploy.sh  install_script.nsi  license.txt
pgmanage/: manage.py  pgmanage-lin.spec  pgmanage-mac.spec  pgmanage-server.py  pgmanage-win.spec  process_executor-mac.spec  process_executor-win.spec
pgmanage/app/: serializers.py  urls.py
pgmanage/app/bgjob/: jobs.py  process_executor.py
pgmanage/app/bgprocess/: process_executor.py  processes.py
pgmanage/app/client_manager/: __init__.py  client_manager.py
pgmanage/app/file_manager/: file_manager.py
pgmanage/app/include/: Session.py
pgmanage/app/migrations/: 0005_process.py  (+1 more)
pgmanage/pgmanage/: custom_settings.py  logging_filter.py  settings.py  urls.py  wsgi.py
(+592 files in other folders)
