[tool.poetry]
name = "pgmanage"
version = "1.0.0"
description = "Database management tool"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.13"
cryptography = "36.0.2"
django = "3.2.18"
tornado = "6.0.2"
click = "7.0"
openpyxl = "2.5.14"
restrictedpython = "6.0"
pymysql = "1.0.*"
sshtunnel = "0.1.5"
pexpect = "4.7.0"
cherrypy = "18.1.1"
psycopg2 = "^2.9.5"
pgspecial = "1.13.0"
psutil = "^5.9.4"
oracledb = "1.3.1"
django-vite = "^2.1.3"


[tool.poetry.group.dev.dependencies]
django-sass = "1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
