[tool.poetry]
name = "pgmanage"
version = "1.0.0"
description = "Database management tool"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.13"
cryptography = "41.0.7"
django = "4.2.17"
openpyxl = "3.0.10"
restrictedpython = "6.0"
pymysql = "1.1.1"
sshtunnel = "0.4.0"
cherrypy = "18.1.1"
psycopg2 = "2.9.10"
pgspecial = "1.13.0"
psutil = "5.9.8"
oracledb = "2.2.1"
django-vite = "3.0.4"
sqlparse = "0.5.1"
portend = "3.1"
tempora = "5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
